Fix header emblem spacing issue, add root link (#9)
There was a 6 pixel extra black board at the bottom of the header-right
column. Also, there was no link to the root on the header-right logo.
This was useful on the old site, so it's been added.

--- a/app/assets/stylesheets/partials/_header.scss
+++ b/app/assets/stylesheets/partials/_header.scss
@@ -15,12 +15,21 @@
       display: inherit;
       background: $black asset-url('logo_left_2x.png') no-repeat;
       background-size: contain;
+      height: 252px;
     }
+
+    a {
+      height: 250px;
+      display: block;
+    }
+
     img {
       position: relative;
       z-index: -1000;
-      max-height: 100%;
       max-width: 100%;
+      height: 250px;
+      padding: 0;
+      margin: 0;
     }
   }
 
